--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ h1{
     font-size: 40px;
     font-weight: 600;
 }
+h2{
+    font-size: 25px;
+    font-weight: 500;
+}
 h3{
     font-size: 15px;
     font-weight: 400;
@@ -98,7 +102,32 @@ h3{
 
 /*section three*/
 
-
+.donate-plan-text{
+    text-align: center;
+    margin-top: 150px;
+}
+.donate-plan-box{
+    display: flex;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+.donate-plan-box1{
+    background-color:rgb(198, 228, 228);
+    padding: 20px 10px;
+    text-align: justify;
+}
+.donate-plan-box2{
+    background-color:rgb(245, 220, 187);
+    padding: 20px 10px;
+    margin-left: 10px;
+    text-align: justify;
+}
+.donate-plan-box3{
+    background-color:rgb(182, 202, 195);
+    padding: 20px 10px;
+    margin-left: 10px;
+    text-align: justify;
+}
 
 
 
